force-app/main/default/objects/QPB_Statement__c/QPB_Statement__c.object-meta.xml
<CustomObject>
    <description>NPN: Created for SDS-1406
Stores the QPB details for partners</description>
    <label>QPB Statement</label>
    <nameField>
        <displayFormat>QPBS-{000000}</displayFormat>
        <label>QPB Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QPB Statements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>