force-app/main/default/objects/QPB_Statement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QPB Statements</relationshipLabel>
    <relationshipName>QPB_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>