force-app/main/default/objects/QPB_Statement__c/fields/Attachment_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment Uploaded?</label>
    <type>Checkbox</type>
</CustomField>