force-app/main/default/objects/QPB_Statement__c/fields/FY_QTR__c.field-meta.xml
<CustomField>
    <fullName>FY_QTR__c</fullName>
    <formula>RIGHT(TEXT(Fiscal_Year__c), 2) + RIGHT(TEXT(Quarter__c), 1) + IF(ISPICKVAL(Type__c, &apos;Progress&apos;),&apos;1&apos;,&apos;2&apos;)</formula>
    <label>FY_QTR</label>
    <type>Text</type>
</CustomField>