force-app/main/default/objects/QPB_Statement__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified?</label>
    <type>Checkbox</type>
</CustomField>